css/roos-roxie.css
/* ... */
#page-wrapper {
	background-color:#FFFFFF;
}

.page-boxed {
	width:auto;
	margin:0 auto;
	box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
}

@media (min-width: 992px) {
  .page-boxed {
    width: 1000px;
  }
}

@media (min-width: 1200px) {
  .page-boxed {
    width: 1200px;
  }
}

a,
a:focus,
a:hover,
button,
button:focus,
button:hover,
button:active {
	outline:0 none;
	text-decoration:none;
}

p {
	margin: 0 0 20px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	color:#333333; font-weight: 300;
}

/* TYPOGRAPHY */

ul.list-large li {
	font-size:18px;
	line-height:36px;
}

.text-lg {
	font-size:20px;
}

.text-success {
	color:#2ECC71;
}

.text-info {
	color:#3498DB;
}

.text-danger {
	color:#C0392B;
}

.text-warning {
	color:#E67E22;
}

.dl-horizontal dt {
	width: 250px;
}

.dl-horizontal dd {
	margin-left: 270px;
}

.dl-horizontal dt,
.dl-horizontal dd {
	margin-bottom:10px;
}

/* BUTTONS */

.btn:focus,
.btn:active:focus,
.btn.active:focus {
	outline:0 none;
	outline-offset:0;
}

.btn {
	border:1px solid rgba(0,0,0,0.125);
	border-bottom-width:2px;
	text-transform:uppercase;
	font-size:12px;
	font-weight:bold;
	padding: 8px 12px 7px;
}

.btn:active,
.btn.active {
    box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.2) inset;
}

.btn i {
	margin-right:8px;
}

.btn-default,
.alert-default {
	background-color:#F0F0F0;
	color: #555555;
}

.btn-default:hover,
.btn-default:focus,
.btn-default.active {
	background-color:#E0E0E0;
	border-color:#E0E0E0;
}

.btn-default:active,
.btn-default.active {
    box-shadow: 0 2px 1px 1px rgba(0, 0, 0, 0.05) inset;
}

body a.btn-default,
body a.btn-default:hover,
body a.btn-default:focus,
body button.btn-default,
body button.btn-default:hover,
body button.btn-default:focus,
body .btn-group label.btn-default,
body .btn-group label.btn-default:hover,
body .btn-group label.btn-default:focus {
	color: #555555;
}

body a.btn-primary,
body a.btn-primary:hover,
body a.btn-primary:focus,
body button.btn-primary,
body button.btn-primary:hover,
body button.btn-primary:focus,
body a.btn-danger,
body a.btn-danger:hover,
body a.btn-danger:focus,
body button.btn-danger,
body button.btn-danger:hover,
body button.btn-danger:focus,
body a.btn-info,
body a.btn-info:hover,
body a.btn-info:focus,
body button.btn-info,
body button.btn-info:hover,
body button.btn-info:focus,
body a.btn-success,
body a.btn-success:hover,
body a.btn-success:focus,
body button.btn-success,
body button.btn-success:hover,
body button.btn-success:focus,
body a.btn-warning,
body a.btn-warning:hover,
body a.btn-warning:focus,
body button.btn-warning,
body button.btn-warning:hover,
body button.btn-warning:focus {
	color: #FFFFFF;
}

.btn-danger,
.alert-danger,
.label-danger,
.panel-danger > .panel-heading {
	background-color:#C0392B;
}

.btn-danger:hover,
.btn-danger:focus,
.btn-danger.active {
	background-color:#A3271A;
	border-color:#A3271A;
}

.btn-info,
.alert-info,
.label-info,
.panel-info > .panel-heading {
	background-color:#3498DB;
}

.btn-info:hover,
.btn-info:focus,
.btn-info.active {
	background-color:#2280BF;
	border-color:#2280BF;
}

.btn-warning,
.alert-warning,
.label-warning,
.panel-warning > .panel-heading {
	background-color:#E67E22;
}

.btn-warning:hover,
.btn-warning:focus,
.btn-warning.active {
	background-color:#D67118;
	border-color:#D67118;
}

.btn-success,
.alert-success,
.label-success,
.panel-success > .panel-heading {
	background-color:#2ECC71;
}

.btn-success:hover,
.btn-success:focus,
.btn-success.active {
	background-color:#18BA5D;
	border-color:#18BA5D;
}

.btn-inverse {
	background-color: transparent;
	border-color: #FFFFFF;
	color: #FFFFFF;
	border-width:2px;
}

.btn-inverse:hover,
.btn-inverse:focus {
	background-color: #FFFFFF;
}

.btn-xs {
	font-size:10px;
	padding: 6px 8px 5px;
}

.btn-sm {
	font-size:11px;
	padding: 6px 9px 5px;
}

.btn-lg {
	font-size:14px;
	padding: 11px 16px 10px;
}

/* ALERTS AND LABELS */

.alert {
	border:0;
	border-radius:2px;
	color:#FFFFFF;
}

.alert .close {
    color: #000;
    font-size: 30px;
	position:relative;
	top:-5px;
}

.label-default {
	background-color:#BBBBBB;
}

/* VERTICAL NAV */

.nav.vertical-nav li {
	border-bottom: 1px solid #E5E5E5;
}

.nav.vertical-nav li:last-child {
	border-bottom:0;
}

.nav.vertical-nav li a {
	color: #555555;
    font-weight: 400;
    padding: 6px 0;
	transition-duration: 0.4s;
}

.nav.vertical-nav li a:hover,
.nav.vertical-nav li a:focus {
	background-color:transparent;
}

.nav.vertical-nav li a i {
	margin-right:8px;
}

.nav.vertical-nav li a .badge {
	float:right;
}

/* POPOVER */

.popover {
	padding:0;
	border-radius:3px;
	border-top-width:0;
	z-index:1020;
}

.popover-title {
	color:#FFFFFF;
    border:0;
    border-radius: 2px 2px 0 0;
	font-weight:700;
}

/* TABS */

.nav-tabs {
    border-bottom:0;
}

.nav-tabs > li > a {
    border:0;
    border-radius:0;
    margin-right:0;
	background-color:#E0E0E0;
	color: #555555;
	padding:12px 18px;
	font-weight:700;
}

.nav-tabs > li > a:hover {
	background-color:#D0D0D0;
	color: #555555;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
	border:0;
    color: #FFFFFF;
    cursor: default;
	padding:14px 18px;
	margin-top:-4px;
}

.tab-content {
	/*background-color:#F0F0F0;*/
	/*box-shadow:0 1px 1px 0 rgba(0,0,0,0.2);*/
	padding:20px;
	/*margin-bottom:50px;*/
	border: 2px;
    border-style: solid;
    border-color: rgb(224, 224, 224); /* changes made for product catalog, if needed an ID can be used and this can be changed to default roxie*/
}

/* PANELS */

.panel {
    background-color:#F9F9F9;
	box-shadow:0 1px 1px 0 rgba(0,0,0,0.2);
    border:0;
    border-radius: 0;
    margin-bottom: 20px;
}

.panel-heading {
    border-radius:0;
    padding: 12px 15px;
}

.panel-default > .panel-heading {
    background-color: #E5E5E5;
    color: #555555;
	border-color:rgba(0,0,0,0.1);
}
/* ... */

